@@ -1,10 +1,21 @@
 # ColorChoserModification
+###### Jawad Haider
+
 # Instructions
 13.7 (Advanced Project: Color Chooser App Modification) The property bindings we created in the Color Chooser app (Section 13.4 ) allowed a TextField’s text to update when a Slider’s value changed, but not vice versa. 
 JavaFX also supports bi-directional property bindings. Research bidirectional property bindings online, then create bidirectional bindings between the Sliders
 and the TextFields such that modifying a TextField’s value updates the corresponding slider.
 
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
 # ScreenShots
 ![](img/Screenshot%20from%202020-12-22%2009-10-47.png)
 ![](img/Screenshot%20from%202020-12-22%2009-10-55.png)
-![](img/Screenshot%20from 2020-12-22%2009-11-04.png)
+![](img/Screenshot%20from%202020-12-22%2009-11-04.png)
